error.txt
Traceback (most recent call last):
  File "C:\Users\Solutio\Desktop\Vladimir Personal\Ofertas\Fenix\Plataforma Fenix\test_tpl.py", line 12, in <module>
    get_template('catalog/product_list.html')
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\loader_tags.py", line 235, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 556, in parse
    raise self.error(token, e)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 554, in parse
    filter_expression = self.compile_filter(token.contents)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 676, in compile_filter
    return FilterExpression(token, self)
  File "C:\Users\Solutio\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 776, in __init__
    raise TemplateSyntaxError(
    ...<2 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Template: C:\Users\Solutio\Desktop\Vladimir Personal\Ofertas\Fenix\Plataforma Fenix\templates\catalog\product_list.html, Could not parse the remainder: ': "true,false"' from 'request.user.is_authenticated | yesno: "true,false"'
